--- a/static/scss/components/_header.scss
+++ b/static/scss/components/_header.scss
@@ -138,7 +138,7 @@
   $navigation-background: white;
   $navigation-color: $base-font-color;
   $navigation-color-hover: black;
-  $navigation-height: 84px;
+  $navigation-height: 3em;
   $navigation-nav-button-background: $action-color;
   $navigation-nav-button-background-hover: lighten($navigation-background, 10%);
   $navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20%);
@@ -211,6 +211,8 @@
     float: none;
     min-height: $navigation-height;
     z-index: 9999999;
+    margin-top: 18px;
+    margin-bottom: 18px;
 
     @include media ($horizontal-bar-mode) {
       float: right;
